설문 레이아웃 수정

--- a/src/main/resources/static/portal/css/layout/iv/hq/parts/basic.css
+++ b/src/main/resources/static/portal/css/layout/iv/hq/parts/basic.css
@@ -945,6 +945,10 @@ input.custom-ui[type="radio"]:checked + label:before {
 	font-weight: bold;
 }
 
+.warn {
+	color: #db2828;
+}
+
 /* Go to top */
 a.gotop {
 	display: inline-block;
