--- a/src/main/resources/templates/portal/iv/survey/popup/vote.html
+++ b/src/main/resources/templates/portal/iv/survey/popup/vote.html
@@ -45,10 +45,10 @@
 								<table>
 									<tr>
 										<td>
-											<span style="color:blue;" th:text="${index.count}+'.'"></span>
-											<span style="color:red;" th:if="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_ESSENTIAL}+']'"></span>
-											<span style="color:red;" th:unless="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_POTENTIAL}+']'"></span>
-											<span style="color:blue;" th:text="${voteItem.title}"></span>
+											<span th:text="${index.count}+'.'"></span>
+											<span class="warn" th:if="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_ESSENTIAL}+']'"></span>
+											<span class="warn" th:unless="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_POTENTIAL}+']'"></span>
+											<span th:text="${voteItem.title}"></span>
 										</td>
 									</tr>
 								</table>
@@ -73,10 +73,10 @@
 								<table>
 									<tr>
 										<td>
-											<span style="color:blue;" th:text="${index.count}+'.'"></span>
-											<span style="color:red;" th:if="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_ESSENTIAL}+']'"></span>
-											<span style="color:red;" th:unless="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_POTENTIAL}+']'"></span>
-											<span style="color:blue;" th:text="${voteItem.title}"></span>
+											<span th:text="${index.count}+'.'"></span>
+											<span class="warn" th:if="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_ESSENTIAL}+']'"></span>
+											<span class="warn" th:unless="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_POTENTIAL}+']'"></span>
+											<span th:text="${voteItem.title}"></span>
 											<span>([[#{HQP_L_SELECTION_NUMBER}]] : [[${voteItem.mandatoryCnt}]])</span> 
 										</td>
 									</tr>
@@ -102,10 +102,10 @@
 								<table>
 									<tr>
 										<td>
-											<span style="color:blue;" th:text="${index.count}+'.'"></span>
-											<span style="color:red;" th:if="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_ESSENTIAL}+']'"></span>
-											<span style="color:red;" th:unless="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_POTENTIAL}+']'"></span>
-											<span style="color:blue;" th:text="${voteItem.title}"></span>
+											<span th:text="${index.count}+'.'"></span>
+											<span class="warn" th:if="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_ESSENTIAL}+']'"></span>
+											<span class="warn" th:unless="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_POTENTIAL}+']'"></span>
+											<span th:text="${voteItem.title}"></span>
 										</td>
 									</tr>
 								</table>
@@ -127,10 +127,10 @@
 								<table>
 									<tr>
 										<td>
-											<span style="color:blue;" th:text="${index.count}+'.'"></span>
-											<span style="color:red;" th:if="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_ESSENTIAL}+']'"></span>
-											<span style="color:red;" th:unless="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_POTENTIAL}+']'"></span>
-											<span style="color:blue;" th:text="${voteItem.title}"></span>
+											<span th:text="${index.count}+'.'"></span>
+											<span class="warn" th:if="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_ESSENTIAL}+']'"></span>
+											<span class="warn" th:unless="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_POTENTIAL}+']'"></span>
+											<span th:text="${voteItem.title}"></span>
 											<span>([[#{HQP_L_EXTRA_WEIGHT_SUM}]] : 10[[#{HQP_L_POINT}]])</span>
 										</td>
 									</tr>
@@ -167,10 +167,10 @@
 								<table>
 									<tr>
 										<td>
-											<span style="color:blue;" th:text="${index.count}+'.'"></span>
-											<span style="color:red;" th:if="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_ESSENTIAL}+']'"></span>
-											<span style="color:red;" th:unless="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_POTENTIAL}+']'"></span>
-											<span style="color:blue;" th:text="${voteItem.title}"></span>
+											<span th:text="${index.count}+'.'"></span>
+											<span class="warn" th:if="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_ESSENTIAL}+']'"></span>
+											<span class="warn" th:unless="${(voteItem.fgMandatory == T(org.jwebppy.portal.iv.common.IvCommonVo).YES)}" th:text="'['+#{HQP_L_SELECT_POTENTIAL}+']'"></span>
+											<span th:text="${voteItem.title}"></span>
 										</td>
 									</tr>
 								</table>
