--- a/src/main/resources/templates/portal/iv/survey/question/write.html
+++ b/src/main/resources/templates/portal/iv/survey/question/write.html
@@ -43,7 +43,7 @@
 						<option value="0">[[#{HQP_L_OBJECTIVE_QUESTION}]]</option>
 						<option value="1">[[#{HQP_L_MULTIPLE_SELECTION}]]</option>
 						<option value="2">[[#{HQP_L_SUBJECTIVE_QUESTION}]]</option>
-						<option value="3">[[#{HQP_L_EXTRA_WEIGHT}]]</option>
+						<!-- option value="3">[[#{HQP_L_EXTRA_WEIGHT}]]</option -->
 						<option value="4">[[#{HQP_L_PRIORITY}]]</option>
 					</select>
 				</td>
