--- a/src/main/resources/templates/portal/iv/survey/result/view.html
+++ b/src/main/resources/templates/portal/iv/survey/result/view.html
@@ -45,8 +45,8 @@
 								<table>
 									<tr>
 										<td>
-											<span style="color:blue;" th:text="${rowIndex.count}+'.'"></span>
-											<span style="color:blue;" th:text="${voteItem.title}"></span>
+											<span th:text="${rowIndex.count}+'.'"></span>
+											<span th:text="${voteItem.title}"></span>
 											<span>([[#{HQP_L_OBJECTIVE_QUESTION}]])</span>
 										</td>
 									</tr>
@@ -78,8 +78,8 @@
 								<table>
 									<tr>
 										<td>
-											<span style="color:blue;" th:text="${rowIndex.count}+'.'"></span>
-											<span style="color:blue;" th:text="${voteItem.title}"></span>
+											<span th:text="${rowIndex.count}+'.'"></span>
+											<span th:text="${voteItem.title}"></span>
 											<span>([[#{HQP_L_SELECTION_NUMBER}]] : [[${voteItem.mandatoryCnt}]])</span>
 										</td>
 									</tr>
@@ -111,8 +111,8 @@
 								<table>
 									<tr>
 										<td>
-											<span style="color:blue;" th:text="${rowIndex.count}+'.'"></span>
-											<span style="color:blue;" th:text="${voteItem.title}"></span>
+											<span th:text="${rowIndex.count}+'.'"></span>
+											<span th:text="${voteItem.title}"></span>
 											<span>([[#{HQP_L_SUBJECTIVE_QUESTION}]])</span>
 										</td>
 									</tr>
@@ -135,8 +135,8 @@
 								<table>
 									<tr>
 										<td>
-											<span style="color:blue;" th:text="${rowIndex.count}+'.'"></span>
-											<span style="color:blue;" th:text="${voteItem.title}"></span>
+											<span th:text="${rowIndex.count}+'.'"></span>
+											<span th:text="${voteItem.title}"></span>
 											<span>([[#{HQP_L_EXTRA_WEIGHT_SUM}]] : 10[[#{HQP_L_POINT}]])</span>
 										</td>
 									</tr>
@@ -164,8 +164,8 @@
 								<table>
 									<tr>
 										<td>
-											<span style="color:blue;" th:text="${rowIndex.count}+'.'"></span>
-											<span style="color:blue;" th:text="${voteItem.title}"></span>
+											<span th:text="${rowIndex.count}+'.'"></span>
+											<span th:text="${voteItem.title}"></span>
 											<span>([[#{HQP_L_PRIORITY}]])</span>
 										</td>
 									</tr>
