--- a/src/main/resources/templates/portal/iv/survey/view.html
+++ b/src/main/resources/templates/portal/iv/survey/view.html
@@ -107,6 +107,11 @@
 	</div>
 	<!------------------------------------ 문항보기 그리드 종료 --------------------------------------->
 	
+	<style>
+	body {
+		overflow-y: auto;
+	}
+	</style>	
 	
 	<script>
 	let $tableObj;
