화면 레이아웃 수정

--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/quot/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/quot/view.html
@@ -10,7 +10,7 @@
 	<div class="block-header">
 		<div class="block-title" th:text="#{HQP_T_QUOTATION_LIST}"></div>
 		<div id="BTN_search" class="block-button-area">
-			<button id="BTN_transfer" th:text="#{HQP_B_TRANSFER_TO_ORDER}"></button><!-- Transfer -->
+			<!-- button id="BTN_transfer" th:text="#{HQP_B_TRANSFER_TO_ORDER}"></button --><!-- Transfer -->
 			<button id="BTN_pdfDownload" th:text="#{HQP_B_PDF_DOWNLOAD}"></button><!-- PDF Download -->
 			<button id="BTN_back" th:text="#{HQP_B_BACK}"></button><!-- Back -->
 		</div>
