--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
@@ -56,7 +56,7 @@
 							<li>|</li>
 							<li class="dealer-info" th:text="#{PTL_T_DEALER_INFO}"></li>
 							<li>|</li>
-							<li class="tooltip"><span th:text="#{PTL_T_LAST_LOGIN_INFO}" style="color: #fff"></span><span class="last-login-time tooltiptext"></span></li>
+							<li class="tooltip">[[#{PTL_T_LAST_LOGIN_INFO}]]<span class="last-login-time tooltiptext"></span></li>
 						</ul>
 						<div class="split"></div>
 						<button class="logout-button" type="button" th:text="#{PTL_B_LOGOUT}"></button>
@@ -164,10 +164,10 @@ let Survey = {
 				let survey = data.RESULT;
 				if (survey == null) return;
 				
-				if (confirm('['+survey.title+'] 설문에 응시하시겠습니까?')) {
+				JpUiDimmer.confirm("[" + survey.title + "] [[#{HQP_M_RESPOND_SURVERY}]]", function() {
 					Survey.sSeq = survey.sseq;
 					Survey.popupVote();
-				}
+				});
 			},
 			error: function(jqXHR, textStatus, errorThrown) {
 				console.log(textStatus);
@@ -183,19 +183,18 @@ let Survey = {
 		}
 		Popup.open("/portal/iv/survey/popup/vote?sSeq="+this.sSeq, 700, 700);
 	},
-}
+};
 
-function callbackAfterVote() {
+function callbackAfterVote()
+{
 	document.location.href = "/portal/iv/survey/list";
-}
+};
 
 $(function(){
 	resizeView();
 
 	//상단 메뉴 생성 공통함수
-	//makeGnb();
 	makeGnb2();
-	
 	
 	$(".top-header .logo-doobizplus").on("click", function() {
 		goHome()
@@ -324,7 +323,6 @@ function checkExpiredPassword()
 						document.location.href = "[[${T(org.jwebppy.portal.common.PortalConfigVo).FORM_PASSWORD_CHANGE_PAGE_URL}]]";
 					});					
 				};
-
 			};
 		}
 	});
