--- a/src/main/resources/templates/platform/mgmt/content/view.html
+++ b/src/main/resources/templates/platform/mgmt/content/view.html
@@ -46,7 +46,7 @@
 						<div class="ui teal button BTN_translation"><i class="globe icon"></i> Translation</div>
 						<div class="ui clearing divider"></div>
 					</div>
-					<div class="ui segment tab teal" data-tab="general"></div>
+					<div class="ui segment tab teal" data-tab="general" style="overflow-y: auto; max-height: 45em;"></div>
 					<div class="ui segment tab teal" data-tab="language"></div>
 					<div class="AREA_modify" style="display: none;">
 						<div class="ui clearing divider"></div>
