박교원 차장 체크 사항 반영

--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/popup/error_report.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/popup/error_report.html
@@ -18,8 +18,11 @@
 	
 	<script>
 	$(function(){
-		
-		console.log(JSON.stringify(opener.errorOrderItems));
+		try
+		{
+			$("#totalRows").html(JpUtilsNumber.addComma(opener.errorOrderItems.length) + " row(s).");			
+		}
+		catch (e) {}
 		
 		$tableObj = $("#TBL_grid").DataTable({
 			ordering: false,// 정렬 기능 켬
