--- a/src/main/resources/templates/portal/iv/mgmt/mapping/list.html
+++ b/src/main/resources/templates/portal/iv/mgmt/mapping/list.html
@@ -18,7 +18,7 @@
 	<table class="condition">
 		<tbody>
 			<tr>
-				<th style="width:200px">[[#{PTL_L_DEALER_CODE}]] / [[#{PTL_L_DEALER_NAME}]]</th>
+				<th>[[#{PTL_L_DEALER_CODE}]] / [[#{PTL_L_DEALER_NAME}]]</th>
 				<td>
 					<div class="input-area">
 						<input type="text" id="pName" name="pName" class="custom-ui" autofocus>
