--- a/src/main/resources/templates/portal/iv/hq/parts/export/order/display/inquiry/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/order/display/inquiry/list.html
@@ -102,18 +102,18 @@ $(function(){
 		ordering: true,// 정렬 기능 켬
 		scrollY: 100,
 		columns : [
+			{data: "BSTKD", title: "[[#{HQP_L_PO_NO}]]"},//P.O. No.		
 			{data: "VBELN", title: "[[#{HQP_L_INQUIRY_NO}]]"},//Inuqiry No.
-			{data: "BSTKD", title: "[[#{HQP_L_PO_NO}]]"},//P.O. No.
-			{data: "VBELN2", title: "[[#{HQP_L_INQUIRY_TO_ORDER_NO}]]"},//Sales Doc. No.
 			{data: "ERDAT2", title: "[[#{HQP_L_INQUIRY_DATE}]]"},//Create Date
+			{data: "VBELN2", title: "[[#{HQP_L_INQUIRY_TO_ORDER_NO}]]"},//Sales Doc. No.			
 			{data: "COUNT", title: "[[#{HQP_L_ORDER_ITEM_ROWS}]]"},//Line Item
 			{data: "T_NETWR", title: "[[#{HQP_L_ORDER_AMOUNT}]]"},//Order Amt.
 			{data: "WAERK", title: "[[#{HQP_L_CURR}]]"},//Curr.
 			{data: "RFGSK_TX", title: "[[#{	HQP_L_STATUS}]]"}//Open Status
 		],
 		columnDefs: [
-			{targets: [0, 2], className: "link dt-body-center"},
-			{targets: [2, 3, 4, 6, 7], className: "dt-body-center"},
+			{targets: [0, 3], className: "link"},
+			{targets: [1, 2, 3, 4, 6, 7], className: "dt-body-center"},
 			{targets: 5, className: "dt-body-right"},
 		],
 		ajax: {
