--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/order/create/order_form.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/order/create/order_form.html
@@ -221,6 +221,7 @@
 		},
 		sending: function(file, xhr, formData)
 		{
+			xhr.setRequestHeader(JpUtilsSecurity.CSRF.NAME, JpUtilsSecurity.CSRF.TOKEN);
 		},
 		success: function(file, response)
 		{
