--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/order/shipment/shipment_status_detail.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/order/shipment/shipment_status_detail.html
@@ -96,15 +96,15 @@
 	    		ordering: true,// 정렬 기능 켬
 	    		scrollY: 100,
 	    		columns : [
-	    			{data: "MATWA", 		title: "[[#{EUP_L_0029}]]", "width": "10%"},	// Order Part No. 0
-	    			{data: "MATNR", 		title: "[[#{EUP_L_0030}]]", "width": "10%"},	// Supply Part No 1
+	    			{data: "MATWA", 		title: "[[#{EUP_L_0029}]]"},	// Order Part No. 0
+	    			{data: "MATNR", 		title: "[[#{EUP_L_0030}]]"},	// Supply Part No 1
 	    			{data: "ARKTX", 		title: "[[#{EUP_L_0031}]]"},	// Description 2
-	    			{data: "LFIMG", 		title: "[[#{EUP_L_0141}]]", "width": "8%"},	// Qty 3
-	    			{data: "NETPR", 		title: "[[#{EUP_L_0034}]]", "width": "8%"},	// Net Price 4																											
-	    			{data: "MEINS", 		title: "[[#{EUP_L_0049}]]", "width": "8%"},	// UoM 5
-	    			{data: "NETWR", 		title: "[[#{EUP_L_0045}]]", "width": "10%"},	// Amount 6
-	    			{data: "VBELN", 		title: "[[#{EUP_L_0141}]]", "width": "10%"},	// Sales order no 7
-	    			{data: "BSTKD", 		title: "[[#{EUP_L_0132}]]", "width": "10%"} 	// P.O No. 8
+	    			{data: "LFIMG", 		title: "[[#{EUP_L_0141}]]"},	// Qty 3
+	    			{data: "NETPR", 		title: "[[#{EUP_L_0034}]]"},	// Net Price 4																											
+	    			{data: "MEINS", 		title: "[[#{EUP_L_0049}]]"},	// UoM 5
+	    			{data: "NETWR", 		title: "[[#{EUP_L_0045}]]"},	// Amount 6
+	    			{data: "VBELN", 		title: "[[#{EUP_L_0013}]]"},	// Sales order no 7
+	    			{data: "BSTKD", 		title: "[[#{EUP_L_0132}]]"} 	// P.O No. 8
 	    		],
 	    		columnDefs: [
 					{targets: [0, 1, 3, 4, 5, 7, 8], className: "dt-body-center"},
