EU/UK 그리드 정렬

--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/info/part_info_list.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/info/part_info_list.html
@@ -122,12 +122,12 @@
 		<table class="condition">
 		     <tbody>
 				<tr>
-					<th rowspan="2" th:text="#{EUP_L_0033}"></th><!--List Price  -->
-					<th colspan="2" th:text="#{EUP_L_0034}"></th><!--Net Price  -->			
+					<th style="text-align:center;" rowspan="2" th:text="#{EUP_L_0033}"></th><!--List Price  -->
+					<th style="text-align:center;" colspan="2" th:text="#{EUP_L_0034}"></th><!--Net Price  -->			
 				</tr>		
 		        <tr>
-		            <th th:text="#{EUP_L_0155}"></th><!--Stock Order  -->
-		            <th th:text="#{EUP_L_0156}"></th><!--Emergency Order  -->                        
+		            <th style="text-align:center;" th:text="#{EUP_L_0155}"></th><!--Stock Order  -->
+		            <th style="text-align:center;" th:text="#{EUP_L_0156}"></th><!--Emergency Order  -->                        
 		        </tr>
 				<tr>
 					<td id="LPRICE"></td>
