--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/order/create/order_form.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/order/create/order_form.html
@@ -823,8 +823,8 @@
 				},//Req Qty
 				{name: "lotQty", data: "lotQty", title: "[[#{EUP_L_0050}]]", className:"center"},//Sales Lot
 				{name: "uom", data: "uom", title: "[[#{EUP_L_0049}]]", className:"center"},//UoM
-				{name: "netPrice", data: "netPrice", title: "[[#{EUP_L_0034}]]", className:"center"},//Net Price
-				{name: "netValue", data: "netValue", title: "[[#{EUP_L_0035}]]", className:"center"},//Net Value
+				{name: "netPrice", data: "netPrice", title: "[[#{EUP_L_0034}]]", className:"right"},//Net Price
+				{name: "netValue", data: "netValue", title: "[[#{EUP_L_0035}]]", className:"right"},//Net Value
 				{
 					name: "availabilityMsg",
 					data: "availability",
