--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/order/display/order_list.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/order/display/order_list.html
@@ -117,7 +117,7 @@ $(function(){
 		columnDefs: [
 			//{ className: "left", targets: "_all" }
 			{targets: [0], className: "dt-body-center link"},
-			{targets: [3, 4, 5, 7], className: "dt-body-center"}, 
+			{targets: [4, 5, 7], className: "dt-body-center"}, 
 			{targets: [6], className: "dt-body-right"}
 		],
 		ajax: {
