--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/order/invoice/invoice_status_list_inc.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/order/invoice/invoice_status_list_inc.html
@@ -121,7 +121,7 @@ $(function(){
 		],		
 		columnDefs: [
 			//{ className: "left", targets: "_all" }
-			{targets: [1, 2, 4, 5, 6, 7], className: "dt-body-center"},
+			{targets: [1, 2, 4, 5, 6], className: "dt-body-center"},
 			{targets: [3], className: "dt-body-right"}
 		],
 		ajax: {
