--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/order/shipment/shipment_status_detail.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/order/shipment/shipment_status_detail.html
@@ -107,8 +107,8 @@
 	    			{data: "BSTKD", 		title: "[[#{EUP_L_0132}]]"} 	// P.O No. 8
 	    		],
 	    		columnDefs: [
-					{targets: [0, 1, 3, 4, 5, 7, 8], className: "dt-body-center"},
-					{targets: [6], className: "dt-body-right"}
+	    			{targets: [3, 5, 7], className: 'dt-body-center'},
+	    			{targets: [4, 6], className: 'dt-body-right'}
 	    		],
 	    		data: result.item,
 	    		initComplete:function(settings, json) 
