--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/order/shipment/shipment_status_list.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/order/shipment/shipment_status_list.html
@@ -93,7 +93,7 @@
 			],
 			columnDefs: [
 				{targets: [0], className: "link dt-body-center"},
-				{targets: [1, 2, 3, 4, 5, 7], className: "dt-body-center"}
+				{targets: [2, 3, 4, 5, 7], className: "dt-body-center"}
     		],
 			ajax: {
 				url: "[[${BASE_PATH}]]/order/shipment/shipment_status/data",
