--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/order/display/order_status_list.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/order/display/order_status_list.html
@@ -120,7 +120,7 @@
 			],
 			columnDefs: [
 				{targets: [1], className: 'link dt-body-center'},
-				{targets: [0, 2, 4, 5, 6, 7, 8, 10], className: 'dt-body-center'},
+				{targets: [2, 4, 5, 6, 7, 8, 10], className: 'dt-body-center'},
 			],
 			ajax: {
 				url: "[[${BASE_PATH}]]/order/display/order_status/data",
