--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/info/parts_number_popup_list.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/info/parts_number_popup_list.html
@@ -89,7 +89,7 @@
 				{name: "MAKTX", data: "MAKTX", title: "[[#{EUP_L_0031}]]"}		// Description
 			],
 			columnDefs: [
-				{targets: [1], className: "dt-body-center"}
+				{targets: [1], className: "dt-body-left"}
 			],
 			ajax: {
 				url: "[[${BASE_PATH}]]/info/parts_number_popup_list/data",
