--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/info/sub_item_popup_list.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/info/sub_item_popup_list.html
@@ -79,7 +79,7 @@ $(function(){
 			{name: "ITCCD", 	data: "ITCCD", 		title: "ITCCD(Hidden)"	}			
 		],		
 		columnDefs: [
-			{targets: [1, 3], className: 'dt-body-center'},
+			{targets: [3], className: 'dt-body-center'},
 			{targets: [4,5,6], visible: false}
 		],
 		ajax: {
