--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/info/part_info_list.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/info/part_info_list.html
@@ -109,13 +109,13 @@
 <table class="condition">
 	<thead>
 		<tr>
-			<th rowspan="2" th:text="#{UKP_L_0074}"></th><!--List Price  -->
-			<th colspan="3" th:text="#{UKP_L_0075}"></th><!-- Net Price -->			
+			<th style="text-align:center;" rowspan="2" th:text="#{UKP_L_0074}"></th><!--List Price  -->
+			<th style="text-align:center;" colspan="3" th:text="#{UKP_L_0075}"></th><!-- Net Price -->			
 		</tr>		
         <tr>
-            <th th:text="#{UKP_L_0076}"></th><!-- Stock Order -->
-            <th th:text="#{UKP_L_0077}"></th><!-- Machine Down Order -->
-            <th th:text="#{UKP_L_0078}"></th><!--Emergency Order  -->                        
+            <th style="text-align:center;" th:text="#{UKP_L_0076}"></th><!-- Stock Order -->
+            <th style="text-align:center;" th:text="#{UKP_L_0077}"></th><!-- Machine Down Order -->
+            <th style="text-align:center;" th:text="#{UKP_L_0078}"></th><!--Emergency Order  -->                        
         </tr>
      </thead>
      <tbody>
