--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/info/parts_number_popup_list.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/info/parts_number_popup_list.html
@@ -87,7 +87,7 @@
 				{name: "MAKTX", data: "MAKTX", title: "[[#{UKP_L_0080}]]"}	//Description	
 			],
 			columnDefs: [			
-				{targets: [1], className: 'dt-body-center'}
+				//{targets: [1], className: 'dt-body-center'}
 			],
 			ajax: {
 				url: "[[${BASE_PATH}]]/info/parts_number_popup_list/data",
