--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/order/backorder/backorder_list.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/order/backorder/backorder_list.html
@@ -98,7 +98,7 @@
 				{data: "VRKME", 		title: "[[#{EUP_L_0049}]]"}	//UoM 12
 			],
 			columnDefs: [			
-				{targets: [1, 2, 4, 5, 6, 7, 9, 10, 11], className: 'dt-body-center'},
+				{targets: [2, 4, 5, 9, 10, 11, 12], className: 'dt-body-center'},
 			], 
 			ajax: {
 				url: "[[${BASE_PATH}]]/order/backorder/backorder_list/data",// /portal/iv/eu/parts/domestic/order/backorder/backorder_list
