--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/order/display/order_status_detail.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/order/display/order_status_detail.html
@@ -64,7 +64,7 @@
 				{data: "LST_ETD", 		title: "[[#{EUP_L_0124}]]"}	// Updated ETD 11
 			],		
 			columnDefs: [
-				{targets: [0, 2, 3, 5, 6, 7, 8, 9, 10, 11], className: 'dt-body-center'},
+				{targets: [0, 5, 6, 7, 8, 9, 10, 11], className: 'dt-body-center'},
 			],
 			ajax: {
 				url: "[[${BASE_PATH}]]/order/display/order_status_detail/data",
